--- a/src/automizy.css
+++ b/src/automizy.css
@@ -14,3 +14,4 @@
 @import url("styles/alert.css");
 @import url("styles/message.css");
 @import url("styles/panel.css");
+@import url("styles/progressbar.css");
