--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -311,3 +311,25 @@
     padding: 4px 0 0 0;
     display: block;
 }
+
+
+
+
+.automizy-button-badge{
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: #ffffff;
+    border-color: #1489e6;
+    background: #2196F3;
+    font-size: 11px;
+    font-weight: bold;
+    width: 20px;
+    height: 20px;
+    overflow: hidden;
+    padding: 0;
+    line-height: 1.8;
+    text-align: center;
+    border-radius: 10px;
+    box-sizing: border-box;
+}
