--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -17,17 +17,24 @@
     display:none !important;
     visibility: hidden !important;
     overflow:hidden !important;
-    position:absolute !important;
-    top:0 !important;
-    left:0 !important;
-    /*z-index:-10 !important;*/
+    z-index:-10 !important;
     width:0 !important;
     height:0 !important;
     color:transparent !important;
     font-size:0 !important;
     line-height:0 !important;
     border:none !important;
+    max-width: 0 !important;
+    max-height: 0 !important;
+    padding: 0 !important;
+    margin: 0 !important;
 }
+td.automizy-permission-trap,
+td.automizy-force-hide,
+td.automizy-hide{
+    display:table-cell !important;
+}
+
 .automizy-clickable{
     cursor:pointer;
 }
