--- a/src/styles/input2.css
+++ b/src/styles/input2.css
@@ -1,43 +1,84 @@
 .automizy-input2 {
     display: inline-block;
+    width: 100%;
+    margin-bottom: 14px;
 }
-.automizy-input2-top-label-box{
-    text-align:left;
+
+.automizy-input2.automizy-newrow {
+
+}
+
+.automizy-input2-top-label-box {
+    text-align: left;
     font-weight: bold;
     font-size: 14px;
     color: #3e4855;
-}
-.automizy-input2-table {
-
- }
-.automizy-input2-tr {
-
-}
-.automizy-input2-td {
-
-}
-.automizy-input2-bottom-label-box{
-    text-align:left;
-    font-weight: bold;
-    font-size: 14px;
-    color: #3e4855;
-}
-.automizy-input2-error-box{
-
+    width: 100%;
 }
 
-
-
-.automizy-input2-label-before-cell{
-    vertical-align: middle;
+.automizy-input2-label-before-box {
+    vertical-align: top;
     width: 33%;
     text-align: right;
     font-weight: bold;
     font-size: 14px;
     color: #3e4855;
-    padding-right: 20px;
+    padding: 0 20px 0 0;
+    box-sizing: border-box;
+    display: inline-block;
 }
-.automizy-input2-icon-left-cell{
+
+.automizy-input2-table {
+    width: 100%;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.automizy-input2.automizy-input2-has-left-label .automizy-input2-table {
+    width: 66%;
+    display: inline-table;
+}
+
+.automizy-input2-tr {
+
+}
+
+.automizy-input2-td {
+
+}
+
+.automizy-input2-bottom-label-box {
+    text-align: left;
+    font-weight: bold;
+    font-size: 14px;
+    color: #3e4855;
+}
+
+.automizy-input2 .automizy-input2-error-box {
+    display: none;
+    margin: 0 0 5px 0;
+    position: relative;
+    box-sizing: border-box;
+    color: #da4b50;
+    text-align: left;
+    border: 1px solid #da4b50;
+    width: 100%;
+    padding: 12px 6px 9px 9px;
+    font-weight: bold;
+    font-size: 14px;
+    background-color: #fafafa;
+}
+
+.automizy-input2.automizy-has-error .automizy-input2-input {
+    border: 1px solid #da4b50;
+}
+
+.automizy-input2.automizy-has-error .automizy-input2-error-box {
+    display: block;
+}
+
+.automizy-input2-icon-left-cell {
     min-width: 38px;
     vertical-align: middle;
     white-space: nowrap;
@@ -56,17 +97,23 @@
     padding: 0 4px 0 4px;
     border-right: none;
 }
-.automizy-input2-icon-left-cell span{
+
+.automizy-input2-icon-left-cell span {
     padding: 0 2px 0 2px;
     opacity: 0.5;
 }
-.automizy-input2-icon-left-cell.automizy-clickable span{
+
+.automizy-input2-icon-left-cell.automizy-clickable span {
     opacity: 1;
 }
-.automizy-input2-input-cell{
+
+.automizy-input2-input-cell {
     vertical-align: middle;
+    text-align: left;
+    width: 100%;
 }
-.automizy-input2-icon-right-cell{
+
+.automizy-input2-icon-right-cell {
     min-width: 38px;
     vertical-align: middle;
     white-space: nowrap;
@@ -83,14 +130,17 @@
     -moz-border-bottom-left-radius: 0;
     border-left: none;
 }
-.automizy-input2-icon-right-cell span{
+
+.automizy-input2-icon-right-cell span {
     padding: 0 2px 0 2px;
     opacity: 0.5;
 }
-.automizy-input2-icon-right-cell.automizy-clickable span{
+
+.automizy-input2-icon-right-cell.automizy-clickable span {
     opacity: 1;
 }
-.automizy-input2-label-after-cell{
+
+.automizy-input2-label-after-cell {
     vertical-align: middle;
     width: 0;
     white-space: nowrap;
@@ -99,20 +149,16 @@
     font-weight: bold;
     font-size: 14px;
     color: #3e4855;
-    padding-left: 6px;
+    padding: 0 6px 0 6px;
 }
-.automizy-input2-help-icon-cell{
+
+.automizy-input2-help-icon-cell {
     vertical-align: top;
 }
-.automizy-input2-error-box{
 
-}
-
-
-
-.automizy-input2-input{
+.automizy-input2-input {
     width: 100%;
-    height:34px;
+    height: 34px;
     box-sizing: border-box;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
@@ -130,7 +176,17 @@
     display: inline-block;
 }
 
-.automizy-input2-has-left-icon .automizy-input2-input{
+.automizy-input2-input[type=checkbox],
+.automizy-input2-input[type=radio] {
+    width: auto;
+    height: auto;
+}
+
+textarea.automizy-input2-input {
+    height: 80px;
+}
+
+.automizy-input2-has-left-icon .automizy-input2-input {
     border-top-left-radius: 0;
     -webkit-border-top-left-radius: 0;
     -moz-border-top-left-radius: 0;
@@ -138,11 +194,164 @@
     -webkit-border-bottom-left-radius: 0;
     -moz-border-bottom-left-radius: 0;
 }
-.automizy-input2-has-right-icon .automizy-input2-input{
+
+.automizy-input2-has-right-icon .automizy-input2-input {
     border-top-right-radius: 0;
     -webkit-border-top-right-radius: 0;
     -moz-border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     -webkit-border-bottom-right-radius: 0;
     -moz-border-bottom-right-radius: 0;
+}
+
+.automizy-input2-button-left-cell {
+    white-space: nowrap;
+}
+
+.automizy-input2-has-left-button .automizy-input2-button-left-cell {
+
+}
+
+.automizy-input2-button-right-cell {
+    white-space: nowrap;
+}
+
+.automizy-input2-has-right-button .automizy-input2-button-right-cell {
+
+}
+
+.automizy-input2-top-button-box {
+
+}
+
+.automizy-input2-has-top-button .automizy-input2-top-button-box {
+
+}
+
+.automizy-input2-bottom-button-box {
+
+}
+
+.automizy-input2-has-bottom-button .automizy-input2-bottom-button-box {
+
+}
+
+/*Checkbox & radio*/
+
+.automizy-input2 input[type='checkbox'], .automizy-input2 input[type='radio'] {
+    background-image: url(../images/checkbox-radio.png);
+    background-repeat: no-repeat;
+    margin: 0 8px 0 0;
+    padding: 0;
+    border:none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    -ms-appearance: none;
+    -o-appearance: none;
+    appearance: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    outline: none !important;
+    width: 15px;
+    height: 15px;
+}
+
+.automizy-input2 input[type='checkbox'] {
+    margin-left: 2px;
+    margin-right: 9px;
+}
+
+.automizy-input2 input[type='radio'] {
+    width: 18px;
+    height: 18px;
+}
+
+.automizy-input2 input[type="checkbox"],
+.automizy-input2 input[type="radio"] {
+    margin-top: 7px;
+}
+
+.automizy-input2 input[type='radio'] {
+    background-position: -30px 0;
+}
+
+.automizy-input2 input[type='radio']:checked {
+    background-position: -48px 0;
+}
+
+.automizy-input2 input[type='checkbox']:checked {
+    background-position: -15px 0;
+}
+
+.automizy-input2 input[type='checkbox']:hover:checked,
+.automizy-input2 input[type='checkbox']:focus:checked {
+    background-position: -15px -18px;
+}
+
+.automizy-input2 input[type='radio']:hover:checked,
+.automizy-input2 input[type='radio']:focus:checked {
+    background-position: -48px -18px;
+}
+
+.automizy-input2 input[type='checkbox']:hover,
+.automizy-input2 input[type='checkbox']:focus {
+    background-position: 0 -18px;
+}
+
+.automizy-input2 input[type='radio']:hover,
+.automizy-input2 input[type='radio']:focus {
+    background-position: -30px -18px;
+}
+
+.automizy-input2 input[type='checkbox']:active {
+    background-position: 0 -36px;
+}
+
+.automizy-input2 input[type='radio']:active {
+    background-position: -30px -36px;
+}
+
+.automizy-input2 input[type='checkbox']:active:checked {
+    background-position: -15px -36px;
+}
+
+.automizy-input2 input[type='radio']:active:checked {
+    background-position: -48px -36px;
+}
+
+.automizy-input2 input[type='checkbox']:disabled {
+    background-position: 0 -54px;
+}
+
+.automizy-input2 input[type='radio']:disabled {
+    background-position: -30px -54px;
+}
+
+.automizy-input2 input[type='checkbox']:disabled:checked {
+    background-position: -15px -54px;
+}
+
+.automizy-input2 input[type='radio']:disabled:checked {
+    background-position: -48px -54px;
+}
+
+.automizy-input2 input[type='checkbox']:hover:disabled,
+.automizy-input2 input[type='checkbox']:focus:disabled {
+    background-position: 0 -54px;
+}
+
+.automizy-input2 input[type='radio']:hover:disabled,
+.automizy-input2 input[type='radio']:focus:disabled {
+    background-position: -30px -54px;
+}
+
+.automizy-input2 input[type='checkbox']:hover:disabled:checked,
+.automizy-input2 input[type='checkbox']:focus:disabled:checked {
+    background-position: -15px -54px;
+}
+
+.automizy-input2 input[type='radio']:hover:disabled:checked,
+.automizy-input2 input[type='radio']:focus:disabled:checked {
+    background-position: -48px -54px;
 }
