--- a/src/styles/message.css
+++ b/src/styles/message.css
@@ -4,40 +4,107 @@
     border-radius: 3px;
     padding: 0;
     box-sizing: border-box;
+    margin: 0 0 12px 0;
+    clear: both;
 }
 
+.automizy-message-table{
+    width:100%;
+}
+.automizy-message-icon-cell {
+    padding: 10px;
+    text-align: center;
+    vertical-align: top;
+    width:10px;
+}
 .automizy-message-icon {
-    position: absolute;
-    top:10px;
-    left: 10px;
-    padding:8px 0 8px 0;
-    width:20px;
-    text-align:center;
-}
-
-.automizy-message-title{
-    position: absolute;
-    top:10px;
-    left: 38px;
-    font-size: 12px;
-    font-weight: bold;
-    text-transform: uppercase;
+    padding: 9px 0 0 0;
+    width: 34px;
+    height: 34px;
+    border-radius: 3px;
+    text-align: center;
     box-sizing: border-box;
 }
 
+.automizy-message-container-cell{
+    padding:10px 5px 10px 1px;
+    text-align: left;
+    vertical-align: top;
+}
+.automizy-message-title{
+    font-size: 16px;
+    box-sizing: border-box;
+    font-weight: bold;
+    padding:0 0 5px 0;
+}
+.automizy-message-content {
+    text-align: left;
+    box-sizing: border-box;
+    opacity: 0.85;
+    font-size: 13px;
+    line-height: 1.4;
+}
+
+.automizy-message-close-cell {
+    width:10px;
+    text-align:right;
+    vertical-align: top;
+}
 .automizy-message-close {
-    position: absolute;
-    top:0;
-    right: 0;
     padding:10px;
     opacity: 0.50;
     filter: alpha(opacity=50);
     color: #000;
     font-weight: bold;
+    cursor:pointer;
+}
+.automizy-message-close:hover {
+    color: #f46a1f;
+    text-decoration:underline;
 }
 
-.automizy-message-content {
-    text-align: left;
-    box-sizing: border-box;
-    padding:38px 24px 18px
+
+
+.automizy-message-type-warning{
+    color: #624b0f;
+    border-color: #ebc875;
+    background: #ffeec6;
+}
+.automizy-message-type-warning .automizy-message-icon{
+    color: #fff;
+    border-color: #f24a15;
+    background: #FF5722;
+}
+
+.automizy-message-type-info{
+    color: #0f2c62;
+    border-color: #62baf6;
+    background: #c6e8ff;
+}
+.automizy-message-type-info .automizy-message-icon{
+    color: #fff;
+    border-color: #1489e6;
+    background: #2196F3;
+}
+
+.automizy-message-type-success{
+    color: #1e620f;
+    border-color: #7cd362;
+    background: #d3ffc6;
+}
+.automizy-message-type-success .automizy-message-icon{
+    color: #fff;
+    border-color: #3fa243;
+    background: #4CAF50;
+}
+
+.automizy-message-type-error{
+    color: #620f0f;
+    border-color: #db6a6a;
+    background: #ffc6c6;
+}
+.automizy-message-type-error .automizy-message-icon{
+    color: #fff;
+    border-color: #e73629;
+    background: #F44336;
 }
