--- a/src/styles/panel.css
+++ b/src/styles/panel.css
@@ -37,3 +37,16 @@
 .automizy-panel.automizy-skin-content-box .automizy-panel-content{
     padding: 15px;
 }
+
+
+
+.automizy-panel.automizy-skin-bg-blue{
+    color: #ffffff;
+    border-color: #1489e6;
+    background: #2196F3;
+}
+.automizy-panel.automizy-skin-bg-blue .automizy-panel-title{
+    border: none;
+    color: #ffffff;
+    background: #1e8ae0;
+}
