--- a/src/styles/select.css
+++ b/src/styles/select.css
@@ -22,6 +22,7 @@
     -moz-box-shadow: inset 1px 1px 3px #f6f6f6;
     box-shadow: inset 1px 1px 3px #f6f6f6;
     line-height: normal;
+    font-weight: normal;
     position:relative;
 }
 .automizy-select.automizy-active{
