--- a/src/styles/panel.css
+++ b/src/styles/panel.css
@@ -2,7 +2,7 @@
     padding: 0;
     position: relative;
     box-sizing: border-box;
-    margin-bottom: 20px;
+    margin: 0;
     border-radius: 4px;
     background-color: #fff;
     box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
