--- a/src/styles/input2.css
+++ b/src/styles/input2.css
@@ -246,7 +246,7 @@ textarea.automizy-input2-input {
     border-bottom-left-radius: 0;
     -webkit-border-bottom-left-radius: 0;
     -moz-border-bottom-left-radius: 0;
-    border-left: none;
+    border-left-width: 0;
 }
 
 .automizy-input2-has-left-button .automizy-input2-button-left-cell .automizy-button > a{
@@ -256,7 +256,7 @@ textarea.automizy-input2-input {
     border-bottom-right-radius: 0;
     -webkit-border-bottom-right-radius: 0;
     -moz-border-bottom-right-radius: 0;
-    border-right: none;
+    border-right-width: 0;
 }
 
 /*Right button*/
@@ -275,7 +275,7 @@ textarea.automizy-input2-input {
     border-bottom-right-radius: 0;
     -webkit-border-bottom-right-radius: 0;
     -moz-border-bottom-right-radius: 0;
-    border-right: none;
+    border-right-width: 0;
 }
 
 .automizy-input2-has-right-button .automizy-input2-button-right-cell .automizy-button > a{
@@ -285,7 +285,7 @@ textarea.automizy-input2-input {
     border-bottom-left-radius: 0;
     -webkit-border-bottom-left-radius: 0;
     -moz-border-bottom-left-radius: 0;
-    border-left: none;
+    border-left-width: 0;
 }
 
 .automizy-input2-top-button-box {
