--- a/src/automizy.css
+++ b/src/automizy.css
@@ -9,6 +9,7 @@
 @import url("styles/core.css");
 @import url("styles/mobile.css");
 @import url("styles/iphoneStyle.css");
+@import url("styles/inlineEditable.css");
 @import url("styles/select.css");
 @import url("styles/icons.css");
 @import url("styles/alert.css");
