--- a/src/automizy.css
+++ b/src/automizy.css
@@ -16,3 +16,4 @@
 @import url("styles/message.css");
 @import url("styles/panel.css");
 @import url("styles/progressbar.css");
+@import url("styles/tag.css");
