tagger animation update

--- a/src/styles/tag.css
+++ b/src/styles/tag.css
@@ -5,8 +5,9 @@
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;;
-    margin: 0 10px;
+    margin: 10px;
     position: relative;
+    cursor: default;
 }
 
 .automizy-tag .automizy-tag-icon {
@@ -86,3 +87,36 @@
     border-radius: 4px;
     cursor: pointer;
 }
+
+/*Highlight*/
+@keyframes tag-highlight {
+    from {
+        border-color: #b9b9b9;
+        color: #b9b9b9;
+    }
+    to {
+        border-color: #2196F3;
+        color: #2196F3;
+    }
+}
+
+
+.automizy-tag.automizy-tag-highlighted,
+.automizy-tag.automizy-tag-highlighted .automizy-tag-icon,
+.automizy-tag.automizy-tag-highlighted .automizy-tag-close {
+    /*
+    border-color: #2196F3;
+    color: #2196F3;
+    -webkit-transition: color, border-color 0.5s;
+    -moz-transition: color, border-color 0.5s;
+    -ms-transition: color, border-color 0.5s;
+    -o-transition: color, border-color 0.5s;
+    transition: color, border-color 0.5s;
+    */
+    animation-name: tag-highlight;
+    animation-duration: 0.2s;
+    animation-iteration-count: 2;
+    animation-direction: alternate;
+}
+
+
