--- a/src/styles/panel.css
+++ b/src/styles/panel.css
@@ -49,3 +49,27 @@
     color: #ffffff;
     background: #1e8ae0;
 }
+
+/*scrollbar design*/
+
+.automizy-panel ::-webkit-scrollbar {
+    width: 8px;
+}
+
+.automizy-panel ::-webkit-scrollbar-track {
+    -webkit-box-shadow:inset 0px 0px 0px 1px #f8f8f8;
+    border: 1px solid #dadada;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+}
+
+.automizy-panel ::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 4px;
+    border: 1px solid #dadada;
+    background: #c7c7c7;
+    width: 8px;
+}
+.automizy-panel ::-webkit-scrollbar-thumb:window-inactive {
+    background: #e2e2e2;
+}
