--- a/src/styles/input2.css
+++ b/src/styles/input2.css
@@ -178,7 +178,7 @@
     vertical-align: top;
 }
 
-.automizy-input2-input {
+.automizy-input2-input:not(span) {
     width: 100%;
     height: 34px;
     box-sizing: border-box;
