--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -257,7 +257,7 @@
 
 .automizy-button.automizy-has-icon .automizy-button-icon {
     display: inline-block;
-    line-height: 32px;
+    line-height: normal;
 }
 
 .automizy-button.automizy-has-icon:not(.automizy-has-text) .automizy-button-text {
@@ -382,4 +382,8 @@
     text-align: center;
     border-radius: 10px;
     box-sizing: border-box;
+}
+
+.automizy-button-badge:empty{
+    display: none !important;
 }
