--- a/src/styles/dialog.css
+++ b/src/styles/dialog.css
@@ -76,3 +76,25 @@
     overflow-x:hidden;
     overflow-y:auto;
 }
+
+
+.automizy-dialog.automizy-skin-priority-message .automizy-dialog-box{
+    width: 600px !important;
+}
+.automizy-dialog.automizy-skin-priority-message .automizy-dialog-head{
+    padding: 42px 90px 28px 90px;
+    font-size: 24px;
+    border-bottom:none;
+    text-align:center;
+}
+.automizy-dialog.automizy-skin-priority-message .automizy-dialog-content{
+    padding: 15px 90px 15px 90px;
+    font-size: 16px;
+    text-align:center;
+}
+.automizy-dialog.automizy-skin-priority-message .automizy-dialog-buttons{
+    padding: 60px 15px 60px 15px;
+    height:auto;
+    border-top:none;
+    text-align:center;
+}
