--- a/src/automizy.css
+++ b/src/automizy.css
@@ -15,3 +15,4 @@
 @import url("styles/message.css");
 @import url("styles/panel.css");
 @import url("styles/progressbar.css");
+@import url("styles/instructionsNotification.css");
