--- a/src/automizy.css
+++ b/src/automizy.css
@@ -16,3 +16,5 @@
 @import url("styles/panel.css");
 @import url("styles/progressbar.css");
 @import url("styles/instructionsNotification.css");
+@import url("styles/inlineEditable.css");
+@import url("styles/tag.css");
