--- a/src/automizy.css
+++ b/src/automizy.css
@@ -18,3 +18,4 @@
 @import url("styles/progressbar.css");
 @import url("styles/tag.css");
 @import url("styles/instructionsNotification.css");
+@import url("styles/loading.css");
