--- a/src/styles/input2.css
+++ b/src/styles/input2.css
@@ -142,6 +142,24 @@
     text-align: left;
     width: 100%;
 }
+.automizy-input2-input-loading-cell {
+    vertical-align: middle;
+    text-align: left;
+    width: 100%;
+    height: 34px;
+    box-sizing: border-box;
+    outline: none;
+    font-size: 14px;
+    background: #ffffff;
+    padding: 0;
+    color: #2b2f33;
+    border: 1px solid #dfe8f1;
+    -webkit-box-shadow: inset 1px 1px 3px #f6f6f6;
+    -moz-box-shadow: inset 1px 1px 3px #f6f6f6;
+    box-shadow: inset 1px 1px 3px #f6f6f6;
+    line-height: normal;
+    display: table-cell;
+}
 
 .automizy-input2-icon-right-cell {
     min-width: 38px;
