--- a/src/styles/input2.css
+++ b/src/styles/input2.css
@@ -141,6 +141,7 @@
     vertical-align: middle;
     text-align: left;
     width: 100%;
+    position: relative;
 }
 .automizy-input2-input-loading-cell {
     vertical-align: middle;
@@ -340,6 +341,19 @@ textarea.automizy-input2-input {
 
 .automizy-input2-has-bottom-button .automizy-input2-bottom-button-box {
 
+}
+
+/*showing measure*/
+.automizy-input2 .automizy-input2-input-cell[data-measure]::after{
+    content: attr(data-measure);
+    position: absolute;
+    right: 0;
+    padding: 6px 12px;
+    color: rgba(0,0,0,0.4);
+
+}
+.automizy-input2 .automizy-input2-input-cell[data-measure] input.automizy-input2-input{
+   padding-right: 50px;
 }
 
 /*Checkbox & radio*/
