--- a/src/styles/input2.css
+++ b/src/styles/input2.css
@@ -356,6 +356,35 @@ textarea.automizy-input2-input {
    padding-right: 50px;
 }
 
+/*input 2 colorpicker*/
+
+.automizy-input2.has-colorpicker input{
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-right: none;
+}
+
+.automizy-input2 .automizy-input2-td.automizy-input2-colorpicker-input-cell{
+    position: relative;
+    min-width: 34px;
+}
+
+.automizy-input2 .automizy-input2-td.automizy-input2-colorpicker-input-cell input[type="color"].automizy-input2-colorpicker-input{
+    height: 42px;
+    width: 38px;
+    padding: 0;
+    background: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    position: absolute;
+    top: -4px;
+    left: 0px;
+    margin-left: -2px;
+}
+
+
+
 /*Checkbox & radio*/
 
 .automizy-input2 input[type='checkbox'], .automizy-input2 input[type='radio'] {
