input2 borders update

--- a/src/styles/input2.css
+++ b/src/styles/input2.css
@@ -10,16 +10,15 @@
 }
 
 .automizy-input2 input:disabled,
-.automizy-input2 textarea:disabled{
+.automizy-input2 textarea:disabled {
     cursor: not-allowed;
     opacity: .65;
     background: #fafafa;
     filter: alpha(opacity:65);
 }
 
-
-.automizy-input2 input[type='number']{
-    -moz-appearance:textfield;
+.automizy-input2 input[type='number'] {
+    -moz-appearance: textfield;
 }
 
 .automizy-input2-top-label-box {
@@ -41,13 +40,14 @@
     box-sizing: border-box;
     display: inline-block;
 }
+
 .automizy-input2-has-bottom-button .automizy-input2-label-before-box,
-.automizy-input2[type="textarea"] .automizy-input2-label-before-box{
+.automizy-input2[type="textarea"] .automizy-input2-label-before-box {
     vertical-align: top;
     padding: 8px 20px 8px 0;
 }
 
-.automizy-input2-label-before-box .automizy-input2-label-before{
+.automizy-input2-label-before-box .automizy-input2-label-before {
     vertical-align: middle;
 }
 
@@ -68,8 +68,43 @@
 
 }
 
-.automizy-input2-td {
+/*All table cells have top, bottom, and left borders, except right label cell & help cell
+.automizy-input2-table .automizy-input2-tr .automizy-input2-td:not(.automizy-input2-label-after-cell):not(.automizy-input2-help-icon-cell) {
+    border-top: 1px solid #dfe8f1;
+    border-bottom: 1px solid #dfe8f1;
+    border-left: 1px solid #dfe8f1;
+}
 
+/*First cell has rounded left corners
+.automizy-input2-table .automizy-input2-tr .automizy-input2-td:first-child {
+    border-left: 1px solid #dfe8f1;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+/*The cell before the label has rounded right corners
+.automizy-input2-table .automizy-input2-tr .automizy-input2-td:nth-last-child(3) {
+    border-right: 1px solid #dfe8f1;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+/*all cells have rounded left borders which are after a hidden element
+.automizy-input2-td.automizy-hide + .automizy-input2-td {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+/*cells after visible cells have no left border
+.automizy-input2-td:not(.automizy-hide) + .automizy-input2-td{
+    border-left: none;
+}
+*/
+
+/*all cells after the input cell have square left borders*/
+.automizy-input2-td.automizy-input2-input-cell ~ .automizy-input2-td{
+    border-top-left-radius: 0 !important;
+    border-bottom-left-radius: 0 !important;
 }
 
 .automizy-input2-bottom-label-box {
@@ -102,7 +137,7 @@
     display: block;
 }
 
-.automizy-disabled .automizy-input2-input{
+.automizy-disabled .automizy-input2-input {
     cursor: not-allowed;
     opacity: .65;
     background: #fafafa;
@@ -114,6 +149,7 @@
     white-space: nowrap;
     text-align: center;
     background-color: #f9fbfc;
+    /*
     border: 1px solid #dfe8f1;
     border-radius: 4px;
     -webkit-border-radius: 4px;
@@ -124,8 +160,9 @@
     border-bottom-right-radius: 0;
     -webkit-border-bottom-right-radius: 0;
     -moz-border-bottom-right-radius: 0;
-    padding: 0 4px 0 4px;
     border-right: none;
+    */
+    padding: 0 4px 0 4px;
 }
 
 .automizy-input2-icon-left-cell span {
@@ -143,6 +180,7 @@
     width: 100%;
     position: relative;
 }
+
 .automizy-input2-input-loading-cell {
     vertical-align: middle;
     text-align: left;
@@ -154,7 +192,9 @@
     background: #ffffff;
     padding: 0;
     color: #2b2f33;
+
     border: 1px solid #dfe8f1;
+
     -webkit-box-shadow: inset 1px 1px 3px #f6f6f6;
     -moz-box-shadow: inset 1px 1px 3px #f6f6f6;
     box-shadow: inset 1px 1px 3px #f6f6f6;
@@ -168,6 +208,7 @@
     white-space: nowrap;
     text-align: center;
     background-color: #f9fbfc;
+    /*
     border: 1px solid #dfe8f1;
     border-radius: 4px;
     -webkit-border-radius: 4px;
@@ -178,6 +219,7 @@
     -webkit-border-bottom-left-radius: 0;
     -moz-border-bottom-left-radius: 0;
     border-left: none;
+    */
 }
 
 .automizy-input2-icon-right-cell span {
@@ -205,7 +247,8 @@
     vertical-align: middle;
     padding-left: 10px;
 }
-.automizy-input2-help-icon-cell .automizy-input2-help{
+
+.automizy-input2-help-icon-cell .automizy-input2-help {
     opacity: 0.7;
     -webkit-transition: opacity 0.2s;
     -moz-transition: opacity 0.2s;
@@ -213,7 +256,8 @@
     -o-transition: opacity 0.2s;
     transition: opacity 0.2s;
 }
-.automizy-input2-help-icon-cell .automizy-input2-help{
+
+.automizy-input2-help-icon-cell .automizy-input2-help {
     opacity: 0.9;
 }
 
@@ -221,15 +265,22 @@
     width: 100%;
     height: 34px;
     box-sizing: border-box;
+    border-radius: 4px;
+    /*
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
+    */
     outline: none;
     font-size: 14px;
     background: #ffffff;
     padding: 6px 12px;
     color: #2b2f33;
+
+    border: none;
+    /*
     border: 1px solid #dfe8f1;
+    */
     -webkit-box-shadow: inset 1px 1px 3px #f6f6f6;
     -moz-box-shadow: inset 1px 1px 3px #f6f6f6;
     box-shadow: inset 1px 1px 3px #f6f6f6;
@@ -248,6 +299,7 @@ textarea.automizy-input2-input {
 }
 
 /*Iconed inputs*/
+/*
 .automizy-input2-has-left-icon .automizy-input2-input {
     border-top-left-radius: 0;
     -webkit-border-top-left-radius: 0;
@@ -273,12 +325,12 @@ textarea.automizy-input2-input {
     white-space: nowrap;
 }
 
+/*
 .automizy-input2-has-left-button .automizy-input2-button-left-cell {
     border-right: 1px solid #dfe8f1;
 }
 
-
-.automizy-input2-has-left-button input{
+.automizy-input2-has-left-button input {
     border-top-left-radius: 0;
     -webkit-border-top-left-radius: 0;
     -moz-border-top-left-radius: 0;
@@ -288,7 +340,7 @@ textarea.automizy-input2-input {
     border-left-width: 0;
 }
 
-.automizy-input2-has-left-button .automizy-input2-button-left-cell .automizy-button > a{
+.automizy-input2-has-left-button .automizy-input2-button-left-cell .automizy-button > a {
     border-top-right-radius: 0;
     -webkit-border-top-right-radius: 0;
     -moz-border-top-right-radius: 0;
@@ -303,11 +355,12 @@ textarea.automizy-input2-input {
     white-space: nowrap;
 }
 
-.automizy-input2-has-right-button .automizy-input2-button-right-cell{
+/*
+.automizy-input2-has-right-button .automizy-input2-button-right-cell {
     border-left: 1px solid #dfe8f1;
 }
 
-.automizy-input2-has-right-button input{
+.automizy-input2-has-right-button input {
     border-top-right-radius: 0;
     -webkit-border-top-right-radius: 0;
     -moz-border-top-right-radius: 0;
@@ -317,7 +370,7 @@ textarea.automizy-input2-input {
     border-right-width: 0;
 }
 
-.automizy-input2-has-right-button .automizy-input2-button-right-cell .automizy-button > a{
+.automizy-input2-has-right-button .automizy-input2-button-right-cell .automizy-button > a {
     border-top-left-radius: 0;
     -webkit-border-top-left-radius: 0;
     -moz-border-top-left-radius: 0;
@@ -326,7 +379,7 @@ textarea.automizy-input2-input {
     -moz-border-bottom-left-radius: 0;
     border-left-width: 0;
 }
-
+*/
 .automizy-input2-top-button-box {
 
 }
@@ -344,32 +397,35 @@ textarea.automizy-input2-input {
 }
 
 /*showing measure*/
-.automizy-input2 .automizy-input2-input-cell[data-measure]::after{
+.automizy-input2 .automizy-input2-input-cell[data-measure]::after {
     content: attr(data-measure);
     position: absolute;
     right: 0;
     padding: 6px 12px;
-    color: rgba(0,0,0,0.4);
+    color: rgba(0, 0, 0, 0.4);
 
 }
-.automizy-input2 .automizy-input2-input-cell[data-measure] input.automizy-input2-input{
-   padding-right: 50px;
+
+.automizy-input2 .automizy-input2-input-cell[data-measure] input.automizy-input2-input {
+    padding-right: 50px;
 }
 
 /*input 2 colorpicker*/
 
-.automizy-input2.has-colorpicker input{
+/*
+.automizy-input2.has-colorpicker input {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     border-right: none;
 }
+*/
 
-.automizy-input2 .automizy-input2-td.automizy-input2-colorpicker-input-cell{
+.automizy-input2 .automizy-input2-td.automizy-input2-colorpicker-input-cell {
     position: relative;
     min-width: 34px;
 }
 
-.automizy-input2 .automizy-input2-td.automizy-input2-colorpicker-input-cell input[type="color"].automizy-input2-colorpicker-input{
+.automizy-input2 .automizy-input2-td.automizy-input2-colorpicker-input-cell input[type="color"].automizy-input2-colorpicker-input {
     height: 42px;
     width: 38px;
     padding: 0;
@@ -383,7 +439,46 @@ textarea.automizy-input2-input {
     margin-left: -2px;
 }
 
+/*input2 custom spinner on number inputs*/
 
+.automizy-input2 .automizy-input2-spinner-cell {
+    display: none;
+}
+
+.automizy-input2[type="number"].has-custom-spinner .automizy-input2-spinner-cell {
+    display: table-cell;
+}
+
+.automizy-input2[type="number"].has-custom-spinner .automizy-input2-spinner-cell .automizy-input2-spinner-up,
+.automizy-input2[type="number"].has-custom-spinner .automizy-input2-spinner-cell .automizy-input2-spinner-down {
+    box-sizing: border-box;
+    border: none;
+    color: #555a60;
+    background-color: #FEFEFF;
+    font-size: 12px;
+    display: block;
+    width: 30px;
+    height: 17px;
+    text-align: center;
+    padding-top: 1px;
+    cursor: pointer;
+}
+
+.automizy-input2[type="number"].has-custom-spinner .automizy-input2-spinner-cell .automizy-input2-spinner-up:hover,
+.automizy-input2[type="number"].has-custom-spinner .automizy-input2-spinner-cell .automizy-input2-spinner-down:hover {
+    color: #2b2f33;
+    background-color: #f3f3f9;
+}
+
+.automizy-input2[type="number"].has-custom-spinner .automizy-input2-spinner-cell .automizy-input2-spinner-down {
+    border-top: 1px solid #dfe8f1;
+}
+
+.automizy-input2[type="number"].has-custom-spinner input[type=number]::-webkit-inner-spin-button,
+.automizy-input2[type="number"].has-custom-spinner input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
 
 /*Checkbox & radio*/
 
@@ -395,7 +490,7 @@ textarea.automizy-input2-input {
     -webkit-background-image: url(../images/checkbox-radio.png);
     margin: 0 8px 0 0;
     padding: 0;
-    border:none;
+    border: none;
     -moz-appearance: none;
     -webkit-appearance: none;
     -ms-appearance: none;
@@ -548,6 +643,6 @@ textarea.automizy-input2-input {
 
 .automizy-input2 td.automizy-permission-trap,
 .automizy-input2 td.automizy-force-hide,
-.automizy-input2 td.automizy-hide{
-    display:none !important;
+.automizy-input2 td.automizy-hide {
+    display: none !important;
 }
